--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,59 @@
-selenium==4.2.0
-webdriver-manager==3.7.0
+appnope==0.1.3
+astroid==2.12.10
+asttokens==2.0.8
+async-generator==1.10
+attrs==22.1.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.0.12
+cryptography==38.0.1
+decorator==5.1.1
+dill==0.3.5.1
+exceptiongroup==1.0.0rc9
+executing==1.1.0
+h11==0.14.0
+idna==3.4
+ipython==8.5.0
+isort==5.10.1
+jedi==0.18.1
+lazy-object-proxy==1.7.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+outcome==1.2.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.5.2
+prompt-toolkit==3.0.31
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.13.0
+pylint==2.15.3
+pyOpenSSL==22.1.0
+PySocks==1.7.1
+python-dotenv==0.21.0
+python-http-client==3.3.7
 requests==2.27.1
+selenium==4.2.0
 sendgrid==6.9.7
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.3.2.post1
+stack-data==0.5.1
+starkbank-ecdsa==2.1.0
+tomli==2.0.1
+tomlkit==0.11.5
+traitlets==5.4.0
+trio==0.22.0
+trio-websocket==0.9.2
+typing-extensions==4.3.0
+urllib3==1.26.12
+urllib3-secure-extra==0.1.0
+wcwidth==0.2.5
+webdriver-manager==3.7.0
+wrapt==1.14.1
+wsproto==1.2.0
