--- a/config.ini.example
+++ b/config.ini.example
@@ -4,10 +4,10 @@ USERNAME = example@example.com
 PASSWORD = xxxxxxxxxx
 SCHEDULE_ID = 99999999
 MY_SCHEDULE_DATE = 2024-01-01
-; Spanish - Colombia
-COUNTRY_CODE = es-co
-; Bogotá
-FACILITY_ID = 25
+; English - Canada
+COUNTRY_CODE = en-ca
+; Vancouver
+FACILITY_ID = 95
 
 [CHROMEDRIVER]
 ; Details for the script to control Chrome
